proj1/tests/error/dumb.py
print ("Whats the point of this)